Fixed star component and spacing

--- a/src/components/MyReviews/MyReviews.scss
+++ b/src/components/MyReviews/MyReviews.scss
@@ -114,8 +114,15 @@ ul {
 }
 
 .my-reviews-stars {
-  font-size: 12px;
+  font-size: 28px;
   color: #FFCC47;
+  height: 35px;
+  padding-top: 5px;
+}
+
+.my-reviews-star {
+  padding-right: 4px;
+  height: 28px;
 }
 
 .workplace-title {
